# web-rust-personal-profile

./: .env  Cargo.toml  Procfile  procfile  rust-toolchain
.trunk/: trunk.yaml
src/: main.rs
templates/: appline.hbs  index.html.hbs  profile.html.hbs  social.html.hbs  timeline.html.hbs
