[package]
name = "keith_connolly"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["tls"] }
dotenv = "0.15.0"
serde = "1.0.152"

[dependencies.rocket_dyn_templates]
features = ["handlebars"]